Added methods for filtering articles with named entities in web app.

--- a/web_app/static/styles/news.css
+++ b/web_app/static/styles/news.css
@@ -36,7 +36,15 @@
     color: white !important;
 }
 
-.single-tag:not(:hover) {
+.single-tag:active {
+    color: white !important;
+}
+
+.single-tag:not(:hover):not(.active) {
     color: black !important;
     background-color: white !important;
+}
+
+.single-tag.active {
+    color: white !important;
 }
