--- a/web_app/templates/news.html
+++ b/web_app/templates/news.html
@@ -5,7 +5,9 @@
     <title>NewsOrganizer</title>
     <link rel="stylesheet" href="{{ url_for('static',filename='styles/article_card.css') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='styles/news.css') }}">
+    <script src="{{ url_for('static', filename='scripts/jquery-3.5.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='scripts/article_card.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/news.js') }}"></script>
 </head>
 <body>
 {% include 'header.html' %}
