--- a/web_app/templates/header.html
+++ b/web_app/templates/header.html
@@ -11,7 +11,7 @@
 <script src="{{ url_for('static',filename='scripts/header.js') }}"></script>
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">NewsOrganizer</a>
+        <a class="navbar-brand" href="/">NewsOrganizer</a>
         <div class="d-flex justify-content-end header-container">
             <div class="d-flex">
                 <p class="model-label">Current NER model:</p>
