--- a/web_app/templates/news.html
+++ b/web_app/templates/news.html
@@ -42,12 +42,8 @@
     <div id="articles">
         {% for article in articles %}
             {{ article_card(
-                article_id=article.article_id,
-                title=article.title,
+                article=article,
                 summary=summaries[article.article_id],
-                source=article.news_site.name,
-                date=article.article_date,
-                image_url=article.image_url,
                 named_entities=named_entities[article.article_id]
             ) }}
         {% endfor %}
