--- a/web_app/static/styles/news.css
+++ b/web_app/static/styles/news.css
@@ -1,3 +1,11 @@
+* {
+    font-family: "Lato", serif;
+}
+
+.badge {
+    font-family: "Segoe UI", serif !important;
+}
+
 #content {
     display: flex;
 }
@@ -8,6 +16,12 @@
 
 #tags {
     flex: 20%;
+    margin: 0.5em;
+    padding: 0.5em;
+}
+
+#tags h3 {
+    text-align: center;
 }
 
 .tag-header {
