Renamed header.js to main.js.

--- a/web_app/templates/header.html
+++ b/web_app/templates/header.html
@@ -8,7 +8,7 @@
         crossorigin="anonymous">
 </script>
 <script src="{{ url_for('static', filename='scripts/jquery-3.5.1.min.js') }}"></script>
-<script src="{{ url_for('static',filename='scripts/header.js') }}"></script>
+<script src="{{ url_for('static',filename='scripts/main.js') }}"></script>
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">NewsOrganizer</a>
