Added few fixes.

--- a/web_app/templates/article_card.html
+++ b/web_app/templates/article_card.html
@@ -11,7 +11,7 @@
     <div class="card article-card" id="article-{{ article.article_id }}">
         <div class="row g-0">
             <div class="col-md-3">
-                <img src={{ article.image_url }}, class="rounded-start img-fluid article-image" alt="Article image">
+                <img src="{{ article.image_url }}" class="rounded-start img-fluid article-image" alt="Article image">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
